fix page-break on driver signup form

--- a/style/style.css
+++ b/style/style.css
@@ -472,7 +472,7 @@ footer a {
                 width: 360px;
                 position: relative;
                 padding: 20px;
-                margin-top: 2%;
+                margin-top: 5%;
                 margin-left: 5%;
                 box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
                 margin-bottom: 20px;
